fix to swagger, added images
